--- a/Podstrony/Ghosts/Ghosts.html
+++ b/Podstrony/Ghosts/Ghosts.html
@@ -106,7 +106,7 @@ Bardzo przydatne narzędzie do rozpoznawania duchów znajdziesz <a href="https:/
 <div class="maptxt"> Yurei - yurei przyspiesza pasywny spadek sanity. Spalenie smudge sticków w pokoju ducha spowoduje że przez długi czas nie będzie go opuszczała. Poznamy ją po odnotowaniu kombinacji Freezing Temperatures, Ghost Orbs, Ghost Writing.</div> <div style="border-right: 5px solid #1a1a1a; width: 1px; height:290px; float:left;"> </div>
 <div class="mapimg"><img src="..\..\Resources\Ghosts\yurei.png" style="width:508px; height:290px;"> </div> <div style="clear:both"> </div>
 
-<div class="mapimg"><div style="margin-left:auto; margin-right: auto; width: 290px; height: 290px;"><img src="..\Resources\Ghosts\oni.png" style="width:208px; height:290px;"> </div></div> <div style="border-left: 5px solid #1a1a1a; width: 1px; height:290px; float:left;"> </div>
+<div class="mapimg"><div style="margin-left:auto; margin-right: auto; width: 290px; height: 290px;"><img src="..\..\Resources\Ghosts\oni.png" style="width:208px; height:290px;"> </div></div> <div style="border-left: 5px solid #1a1a1a; width: 1px; height:290px; float:left;"> </div>
 <div class="maptxt"> Oni - oni jest agresywnym duchem, który jest bardziej aktywny gdy w pobliżu jest więcej osób. Poruszając się w grupach łatwo go wykryć we wczesnym etapie śledztwa. Często zdarza się że opuszcza swój pokój i porusza się w jego okolicy. Charakteryzują ją EMF Level 5, Ghost Writing, Spirit Box.</div> <div style="clear:both"> </div>
 
 <div style="height: 15px"> </div>
