--- a/Podstrony/Items/Items.html
+++ b/Podstrony/Items/Items.html
@@ -88,7 +88,7 @@ Phasmophobia - Gra, która została wydana w 2020 roku, szybko stała się bardz
 <div class="maptxt"> Video Camera - kamera wideo, jej obraz można podejrzeć na monitorze w vanie. </div> <div style="border-right: 5px solid #1a1a1a; width: 1px; height:290px; float:left;"> </div>
 <div class="mapimg"><img src="..\..\Resources\Items\video.png" style="width:508px; height:290px;"> </div> <div style="clear:both"> </div>
 
-<div class="mapimg"><img src="..\..\Resources\Items\UV.png" style="width:508px; height:290px;"> </div> <div style="border-left: 5px solid #1a1a1a; width: 1px; height:290px; float:left;"> </div>
+<div class="mapimg"><img src="..\..\Resources\Items\uv.png" style="width:508px; height:290px;"> </div> <div style="border-left: 5px solid #1a1a1a; width: 1px; height:290px; float:left;"> </div>
 <div class="maptxt"> UV Flashlight - latarka UV, służy do oświetlania powierzchni w celu zobaczenia odcisków palców. </div> <div style="clear:both"> </div>
 
 <div class="maptxt"> Photo Camera - aparat, służy do robienia zdjęć za które można dostać dodatkowe fundusze po ukończonej misji. </div> <div style="border-right: 5px solid #1a1a1a; width: 1px; height:290px; float:left;"> </div>
