--- a/Podstrony/Maps/Maps.html
+++ b/Podstrony/Maps/Maps.html
@@ -55,7 +55,7 @@ Phasmophobia - Gra, która została wydana w 2020 roku, szybko stała się bardz
 		<div id="sidebar">
 			<div style="height: 20px"> </div>
 		 <a href="../../index.html"><div class="buttonL">Strona główna </div><BR/></a>
-		 <a href="../Devs.html"> <div class="buttonL">O twórcach</div><BR/> </a>
+		 <a href="../Devs/Devs.html"> <div class="buttonL">O twórcach</div><BR/> </a>
 		 <a href="../Mechanics/Mechanics.html">	<div class="buttonL">Mechanika</div><BR/> </a>
 		 <a href="Maps.html"><div class="buttonL">Mapy</div><BR/> </a>
 		 <a href="../Evidence/Evidence.html"><div class="buttonL">Typy dowodów </div><BR/></a>
